deploy process